typos and minor cleanup